# Hurrican

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  README.txt  appveyor.yml
Editor/: Editor.opt  (+4 more)
Hurrican/: .clang-format  CMakeLists.txt  Hurrican.cfg  Hurrican.dsp  Hurrican.dsw  Hurrican.opt  Hurrican.suo.old  Hurrican.vcproj  Hurrican.vcproj.8.00.old  Logdatei.txt  Resource.rc  hurrican  hurrican.cbp  hurrican.rc  readme.txt
Hurrican/data/: Logdatei.txt  boss_ice.it  boss_robofist.it  eis.map  elevator.map  factory.it  gamecontrollerdb.txt  gameover.it  loststation.it  temp.map
Hurrican/data/levels/: eis.map  elevator.map  endboss.map  jungle.map
Hurrican/data/levels/ChJees/: SkillChallenge1.map  SkillChallenge2.map
Hurrican/data/levels/Genocide/: l1.map
Hurrican/data/levels/Second_Empire/: clipboard  world_01a.map  world_01b.map  world_03.map  world_04.map
Hurrican/data/levels/SecretPlanet/: Bonus1.map  Bonus2.map  Bonus3.map  Final1.map  SecretP1.map  SpeedLev.map  SpeedLev2.map
Hurrican/data/levels/Volcano_Temple/: Info.txt  TB_Volcano_Temple.map
Hurrican/data/levels/Walkers_World/: Logdatei.txt  WWlevel1.map  WWlevel10.map  WWlevel2.map  WWlevel3.map  WWlevel4.map  WWlevel5.map  WWlevel6.map  WWlevel7.map  WWlevel8.map  WWlevel9.map  clipboard
Hurrican/data/levels/valentine/: clipboard  indy.map  read_me.txt  xtc.map
Hurrican/data/music/: JungleBeats.it  Tower.it  boss_onslaught.it  cave.it  eis.it  flugsack.it  outtro.it  stageclear.it
Hurrican/data/pvr/: PVRTexTool
Hurrican/data/shaders/: shader_color.vert  shader_etc1_texture.frag  shader_texture.vert
Hurrican/data/shaders/100/: shader_color.vert  shader_render.frag  shader_texture.frag  shader_texture.vert
Hurrican/data/shaders/320/: shader_color.frag  shader_color.vert  shader_etc1_texture.frag  shader_render.frag  shader_texture.frag  shader_texture.vert
Hurrican/data/textures/pvr/: PVRCompress.sh
Hurrican/lang/: deutsch.lng  english.lng  espanol.lng  francais.lng  italiano.lng  polski.lng  portugues.lng
Hurrican/src/: Boss_BigFish.cpp  Boss_Bratklops.cpp  Boss_Bratklops.h  Boss_Bratklops.hpp  Boss_Drache.cpp  Boss_Drache.h  Boss_EisFaust.cpp  Boss_EisFaust.h  Boss_EvilHurri.cpp  Boss_EvilHurri.h  Boss_EvilHurri.hpp  Boss_FahrstuhlBoss.cpp  Boss_FahrstuhlBoss.h  Boss_FlugBoss.cpp  Boss_FlugBoss.h  Boss_FlugBoss.hpp  Boss_Golem.cpp  Boss_Golem.h  Boss_Golem.hpp  Boss_MetalHead.cpp  Boss_MetalHead.h  Boss_PharaoKopf.cpp  Boss_PharaoKopf.h  Boss_PharaoKopf.hpp  Boss_RiesenPiranha.cpp  Boss_RiesenPiranha.h  Boss_RiesenPiranha.hpp  Boss_RiesenQualle.cpp  Boss_RiesenRaupe.cpp  Boss_RiesenRaupe.h  Boss_RiesenRaupe.hpp  Boss_RiesenSpinne.cpp  Boss_RiesenSpinne.h  Boss_RiesenSpinne.hpp  Boss_RiesenWespe.cpp  Boss_RiesenWespe.h  Boss_RiesenWespe.hpp  Boss_Rollmops.cpp  Boss_Rollmops.h  Boss_Rollmops.hpp  (+471 more)
Hurrican/src/SDLPort/: SDL_fmod.c  SDL_fmod.cpp  SDL_fmod.h  SDL_fmod.hpp  SDL_port.cpp  SDL_port.h  SDL_port.hpp  cfbo.cpp  cfbo.h  cfbo.hpp  cshader.cpp  cshader.h  cshader.hpp  eglport.c  eglport.cpp  eglport.h  eglport.hpp  keymap.hpp  opengl.h  opengl.hpp  texture.cpp  texture.h  texture.hpp
Hurrican/src/bosses/: Boss_BigFish.cpp  Boss_BigFish.hpp  Boss_Bratklops.cpp  Boss_Bratklops.hpp  Boss_Drache.cpp  Boss_Drache.hpp  Boss_EisFaust.cpp  Boss_EisFaust.hpp  Boss_EvilHurri.cpp  Boss_EvilHurri.hpp  Boss_FahrstuhlBoss.cpp  Boss_FahrstuhlBoss.hpp  Boss_FlugBoss.cpp  Boss_FlugBoss.hpp  Boss_Golem.cpp  Boss_Golem.hpp  Boss_MetalHead.cpp  Boss_MetalHead.hpp  Boss_PharaoKopf.cpp  Boss_PharaoKopf.hpp  Boss_RiesenPiranha.cpp  Boss_RiesenPiranha.hpp  Boss_RiesenQualle.cpp  Boss_RiesenQualle.hpp  Boss_RiesenRaupe.cpp  Boss_RiesenRaupe.hpp  Boss_RiesenSpinne.cpp  Boss_RiesenSpinne.hpp  Boss_RiesenWespe.cpp  Boss_RiesenWespe.hpp  Boss_Rollmops.cpp  Boss_Rollmops.hpp  Boss_SchmidtOrgie.cpp  Boss_SchmidtOrgie.hpp  Boss_Schneekoenig.cpp  Boss_Schneekoenig.hpp  Boss_Skeletor.cpp  Boss_Skeletor.hpp  Boss_Skull.cpp  Boss_Skull.hpp  (+10 more)
Hurrican/src/cml/cml/: cml.h  dynamic.h  quaternion.h  vector.h
Hurrican/src/enemies/: Gegner_Auge.cpp  Gegner_Auge.hpp  Gegner_BallerDrone.cpp  Gegner_BallerDrone.hpp  Gegner_BigRocket.cpp  Gegner_BigRocket.hpp  Gegner_BlueBoulder.cpp  Gegner_BlueBoulder.hpp  Gegner_BrockelRock.cpp  Gegner_BrockelRock.hpp  Gegner_Climber.cpp  Gegner_Climber.hpp  Gegner_DeckenKrabbe.cpp  Gegner_DeckenKrabbe.hpp  Gegner_Deckenturm.cpp  Gegner_Deckenturm.hpp  Gegner_Diamant.cpp  Gegner_Diamant.hpp  Gegner_Drone.cpp  Gegner_Drone.hpp  Gegner_EierMann.cpp  Gegner_EierMann.hpp  Gegner_EisStachel.cpp  Gegner_EisStachel.hpp  Gegner_Eiszapfen.cpp  Gegner_Eiszapfen.hpp  Gegner_Extras.cpp  Gegner_Extras.hpp  Gegner_FallBombe.cpp  Gegner_FallBombe.hpp  Gegner_FallingRock.cpp  Gegner_FallingRock.hpp  Gegner_FetteRakete.cpp  Gegner_FetteRakete.hpp  Gegner_FetteSpinne.cpp  Gegner_FetteSpinne.hpp  Gegner_FieseDrone.cpp  Gegner_FieseDrone.hpp  Gegner_FieserFireWalker.cpp  Gegner_FieserFireWalker.hpp  (+133 more)
Hurrican/src/triggers/: Trigger_Bruecke.cpp  Trigger_Bruecke.hpp  Trigger_Column.cpp  Trigger_Column.hpp  Trigger_Column2.cpp  Trigger_Column2.hpp  Trigger_EndLevel.cpp  Trigger_EndLevel.hpp  Trigger_FadeMusic.cpp  Trigger_FadeMusic.hpp  Trigger_FahrStuhl.cpp  Trigger_Fahrstuhl.hpp  Trigger_Fass.cpp  Trigger_Fass.hpp  Trigger_Feuerspucker.cpp  Trigger_Feuerspucker.hpp  Trigger_Floating.cpp  Trigger_Floating.hpp  Trigger_Floating2.cpp  Trigger_Floating2.hpp  Trigger_Floating3.cpp  Trigger_Floating3.hpp  Trigger_Glubschi.cpp  Trigger_Glubschi.hpp  Trigger_Glubschi2.cpp  Trigger_Glubschi2.hpp  Trigger_LaFassSpawner.cpp  Trigger_LaFassSpawner.hpp  Trigger_Lift.cpp  Trigger_Lift.hpp  Trigger_LightFlare.cpp  Trigger_LightFlare.hpp  Trigger_LuefterGross.cpp  Trigger_LuefterGross.hpp  Trigger_LuefterKlein.cpp  Trigger_LuefterKlein.hpp  Trigger_LuefterKlein2.cpp  Trigger_LuefterKlein2.hpp  Trigger_Mushroom.cpp  Trigger_Mushroom.hpp  (+36 more)
Hurrican/src/unrarlib040/: license.txt  readme.txt
Hurrican/src/unrarlib040/doc/: CHANGES  faq.txt
Hurrican/src/unrarlib040/unrarlib/: unrarlib.c  unrarlib.cpp  unrarlib.h
(+669 files in other folders)
